// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="alert"
  style={
    {
      "backgroundColor": "#F6F6F7",
      "borderRadius": 12,
      "flexDirection": "row",
      "gap": 12,
      "padding": 16,
    }
  }
>
  <View />
  <View
    style={
      {
        "flex": 1,
        "gap": 4,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#111113",
          },
          {},
          null,
        ]
      }
    >
      Conexão perdida
    </Text>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          {
            "color": "#5F5F6A",
          },
          {},
          null,
        ]
      }
    >
      Reconecte para continuar.
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": undefined,
            "borderRadius": 12,
            "borderWidth": 0,
            "justifyContent": "center",
            "minHeight": 44,
            "opacity": 1,
            "paddingHorizontal": 20,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#C7186B",
              },
              {
                "opacity": 1,
              },
              null,
            ]
          }
        >
          Reconectar
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Banner snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="alert"
  style={
    {
      "backgroundColor": "#17171A",
      "borderRadius": 12,
      "flexDirection": "row",
      "gap": 12,
      "padding": 16,
    }
  }
>
  <View />
  <View
    style={
      {
        "flex": 1,
        "gap": 4,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "lineHeight": 18,
          },
          {
            "color": "#F2F2F3",
          },
          {},
          null,
        ]
      }
    >
      Conexão perdida
    </Text>
    <Text
      maxFontSizeMultiplier={1.3}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          {
            "color": "#9B9BA6",
          },
          {},
          null,
        ]
      }
    >
      Reconecte para continuar.
    </Text>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": undefined,
            "borderRadius": 12,
            "borderWidth": 0,
            "justifyContent": "center",
            "minHeight": 44,
            "opacity": 1,
            "paddingHorizontal": 20,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              {
                "color": "#FF4FA0",
              },
              {
                "opacity": 1,
              },
              null,
            ]
          }
        >
          Reconectar
        </Text>
      </View>
    </View>
  </View>
</View>
`;
